<resources>
    <string name="app_name">Final Project</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="HomeReturn">Go back</string>
    <string name="typeRec" translatable="false">Type the recipe here</string>
    <string name="add">add</string>
    <string name="clear">clear all</string>
    <string name="musicIcon">Songster</string>
    <string name="musicToast">Going to songster page</string>
    <string name="albumInfo">List of Songs</string>
    <string name="saveAlbumButton">Add to Favorites</string>
    <string name="deleteFromFavButton">Delete from Favorites</string>
    <string name="musicApplicationTitle">Songster</string>
    <string name="musicApplicationAuthor" translatable="false">Evgenii Filatov</string>
    <string name="musicVersionNumber" translatable="false">1.0</string>
    <string name="textChoseArtist">Type the artist name to search</string>
    <string name="artistSearchButton">Search</string>
    <string name="listOfSongs">List of Songs</string>
    <string name="dialogMessage1">Add to Favourite?</string>
    <string name="dialogMessage2">song</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="search">Search</string>
    <string name="savedAlbumsHeader">The list of the saved albums</string>
    <string name="searchToast">search toast</string>
    <string name="artist_name">Artist Name</string>
    <string name="favorites">Favorite songs</string>
    <string name="search1">SEARCH</string>
    <string name="songster">songster</string>
    <!--<string name="app_name">Car Database</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cars" translatable="false">cars</string>
    <string name="title_activity_start" translatable="false">Trivia Game</string>

    <string name="HTPButton">Directions</string>
    <string name="creditButton">Credits</string>
    <string name="trivia">TRIVIA</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="enterDif">Enter Difficulty</string>
    <string name="enterType">Enter Question Type</string>

    <string name="score">Score</string>

    <string name="gameOver">Game Over!</string>
    <string name="received">You have received </string>
    <string name="points"> points.</string>
    <string name="answered">You answered</string>
    <string name="of"> of </string>
    <string name="questions">questions correctly!</string>
    <string name="greatJob">Great Job!</string>
    <string name="continueBtn">Continue...</string>
    <string name="title_activity_trivia">Trivia</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>