<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/homeReturnMusic"
        android:title="@string/HomeReturn"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>  <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/searchItemMusic"
        android:orderInCategory="50"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="always|collapseActionView"
        android:title="@string/search"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item android:id="@+id/favoriteSongs"
        android:orderInCategory="150"
        android:icon="@drawable/heart"
        app:showAsAction="always|collapseActionView"
        android:title="@string/favorites"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->

</menu>