<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ArtistSearchResults"
    android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/artistId"
                android:textSize="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/listOfSongs"
                />
            <TextView
                android:id="@+id/artistName"
                android:textSize="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/artist_name"
                />


            <TextView
                android:id="@+id/songId"
                android:textSize="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/listOfSongs"
                />

            <TextView
                android:id="@+id/songName"
                android:textSize="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/listOfSongs"
                />


            <Button
                android:id="@+id/saveAlbumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveAlbumButton" />

        </LinearLayout>



</LinearLayout>

